# chromadb-article

./: README.md  article_chromadb.md  article_chromadb.tex  article_chromadb_fr.tex  chatbot.py  chroma_quickstart.ipynb  main.py  main_fr_polices.py  myvenv  polices.txt  policies.txt  resu1.md  resu2.md  resu2_fr.md  spip  spip_checker.py
my_vectordb/: chroma.sqlite3
patch314/: README.md  patch.sh  pyproject.toml
patch314/.claude/: settings.local.json
patch314/.github/workflows/: python314_ci.yml
patch314/chromadb_py314_compat/: __init__.py  pyproject.toml  settings_compat.py
patch314/clients/js/: version_gate.ts
patch314/patches/: config_pydantic_fix.patch  config_pydantic_fix.py
patch314/rust/: abi_compat_notes.md  build_check.rs
patch314/tests/: conftest.py  test_import.py  test_settings.py
