[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromadb-py314-patch"
version = "0.1.0"
description = "Python 3.14 compatibility patch for ChromaDB (chroma-core/chroma#5996)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = [
    "chromadb>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
