[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromadb-py314-compat"
version = "0.1.0"
description = "Compatibility shim for ChromaDB on Python 3.14+ (fixes pydantic import)"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "chromadb>=1.0",
]
